# wordler

./: .gitignore  .gitmodules  Cargo.toml  config.ini
common/: config.py  database.py  test_config.py
scraper/: scrape_and_store_answer.py  scraper.py
solver/src/solver/: random_valid_word.rs
solver/src/words/: words.rs
src/: game.rs  lib.rs  main.rs
src/backend/: lib.rs
src/backend/solver/: word_filter.rs
src/backend/words/: mod.rs
src/game/: console.rs  engine.rs  game.rs  given_word.rs  mod.rs  wordle.rs
src/solver/: analyser.rs  mod.rs  random_valid_word.rs  solver.rs
src/wordle/: console.rs  game.rs  mod.rs
src/wordle/words/: mod.rs
src/words/: mod.rs
web/web/: settings.py
web/wordler/: apps.py
